kommit en bit i labbymezzage

--- a/2-labbymezzage/index.html
+++ b/2-labbymezzage/index.html
@@ -2,11 +2,25 @@
 <html lang="sv">
 <head>
 	<meta charset="UTF-8" />
-    <title>Labbymezzage</title>
+	<title>Labbymezzage</title>
+	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
     <body>
+        <main>
+            <h1>Labbymezzage</h1>
         
-    <script src="script.js"></script>
-    <script src="message.js"></script>
+        
+                <form class="9-large columns">
+                    <fieldset>
+                        <legend>Meddelande</legend>
+                        <textarea></textarea>
+                    </fieldset>
+                    <input type="submit">
+                </form>
+        </main>
+        <script src="script.js"></script>
+        <script src="message.js"></script>
     </body>
 </html>
