lagt till lite stilning på labby mezzage

--- a/2-labbymezzage/index.html
+++ b/2-labbymezzage/index.html
@@ -3,22 +3,18 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Labbymezzage</title>
-	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/foundation.css">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
     <body>
-        <main>
-            <h1>Labbymezzage</h1>
         
-        
-                <form class="9-large columns">
-                    <fieldset>
-                        <legend>Meddelande</legend>
-                        <textarea></textarea>
-                    </fieldset>
-                    <input type="submit">
-                </form>
+        <main class="large-9 columns">
+            <form class="large-6 columns">
+                <h1>Labby mezzage</h1>
+                <textarea></textarea>
+                <input type="submit" value="Skicka"/>
+            </form>
         </main>
         <script src="script.js"></script>
         <script src="message.js"></script>
