kommit längre i labbymezzage

--- a/2-labbymezzage/index.html
+++ b/2-labbymezzage/index.html
@@ -8,12 +8,12 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
     <body>
-        
         <main class="large-9 columns">
-            <form class="large-6 columns">
+            <form id="form" class="large-6 columns">
                 <h1>Labby mezzage</h1>
-                <textarea></textarea>
-                <input type="submit" value="Skicka"/>
+                <div id="messagebox"></div>
+                <textarea id="textArea" value=""></textarea>
+                <input type="submit" value="Skicka" id="send"/>
             </form>
         </main>
         <script src="script.js"></script>
