moment 6 snart klart

--- a/2-labbymezzage/index.html
+++ b/2-labbymezzage/index.html
@@ -12,6 +12,7 @@
             <form id="form" class="large-6 columns">
                 <h1>Labby mezzage</h1>
                 <div id="messagebox"></div>
+                <div id="counter">Antal Meddelande</div>
                 <textarea id="textArea" value=""></textarea>
                 <input type="submit" value="Skicka" id="send"/>
             </form>
