tagit bort lite onödig kod och kommenterat upp lite

--- a/2-labbymezzage/index.html
+++ b/2-labbymezzage/index.html
@@ -13,7 +13,7 @@
                 <h1>Labby mezzage</h1>
                 <div id="messagebox"></div>
                 <div id="counter">Antal meddelanden: </div>
-                <textarea id="textArea" value=""></textarea>
+                <textarea id="textArea" placeholder="Skriv här......" value=""></textarea>
                 <input type="submit" value="Skicka" id="send"/>
             </form>
         </main>
