bara stilning kvar i labbymezzage

--- a/2-labbymezzage/index.html
+++ b/2-labbymezzage/index.html
@@ -8,14 +8,15 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
     <body>
-        <main class="large-9 columns">
-            <form id="form" class="large-6 columns">
-                <h1>Labby mezzage</h1>
-                <div id="messagebox"></div>
-                <div id="counter">Antal meddelanden: </div>
-                <textarea id="textArea" placeholder="Skriv här......" value=""></textarea>
-                <input type="submit" value="Skicka" id="send"/>
-            </form>
+        <main class="large-8 columns">
+           
+                <!--<form id="form" class="large-6 columns">
+                    <h1>Labby mezzage</h1>
+                    <div id="messagebox"></div>
+                    <div id="counter">Antal meddelanden: </div>
+                    <textarea id="textArea" placeholder="Skriv här......" value=""></textarea>
+                    <input type="submit" value="Skicka" id="send"/>
+                </form>-->
         </main>
         <script src="script.js"></script>
         <script src="message.js"></script>
