kommit en bit på memoryt

--- a/3-gameon/index.html
+++ b/3-gameon/index.html
@@ -2,10 +2,11 @@
 <html lang="sv">
 <head>
 	<meta charset="UTF-8" />
+	<link rel="stylesheet" href="style.css">
 	<title>Memory</title>
 </head>
     <body>
-        <main class="large-8 columns">
+        <main id="main" class="large-8 columns">
         hej
         </main>
         <script src="memory/script/random.js"></script>
