nästan klar med memory

--- a/3-gameon/index.html
+++ b/3-gameon/index.html
@@ -10,5 +10,6 @@
         </main>
         <script src="memory/script/random.js"></script>
         <script src="memory/script/memory.js"></script>
+        <script src="memory/script/card.js"></script>
     </body>
 </html>
