klar med memoryt

--- a/3-gameon/index.html
+++ b/3-gameon/index.html
@@ -6,8 +6,9 @@
 	<title>Memory</title>
 </head>
     <body>
-        <main id="main" class="large-8 columns">
+        <main id="main">
         </main>
+        <p id="pTag"></p>
         <script src="memory/script/random.js"></script>
         <script src="memory/script/memory.js"></script>
         <script src="memory/script/card.js"></script>
