--- a/4-forms/index.html
+++ b/4-forms/index.html
@@ -11,36 +11,28 @@
                 <div class="row">
                     <div class="large-12 columns">
                         <label>Förnamn</label>
-                        <input type="text" placeholder="Förnamn" name="name" class="empty" />
+                        <input type="text" id="fName" placeholder="Förnamn" name="name" class="empty" />
                     </div>
                 </div>
                 
                 <div class="row">
                     <div class="large-4 columns">
                       <label>Efternamn</label>
-                      <input type="text" placeholder="Efternamn" name="surname" class="empty" />
+                      <input type="text" id="sName" placeholder="Efternamn" name="surname" class="empty" />
                     </div>
                         <div class="large-4 columns">
                           <label>Postnummer</label>
-                          <input type="text" placeholder="XXXXX" name="postalcode" />
+                          <input type="text" id="postCode" placeholder="XXXXX" name="postalcode" />
                         </div>
                             <div class="large-4 columns">
                                 <div class="row collapse">
                                     <label>E-post</label>
-                                    <input type="text" placeholder="E-post" name="email" />
+                                    <input type="text" id="email" placeholder="E-post" name="email" />
                                 </div>
                             </div>
                 </div>
             
                 <div class="row">
-                    <div class="large-12 columns">
-                        <label>Prismodell</label>
-                        <select>
-                            <option value="lag">Låg</option>
-                            <option value="mellan">Mellan</option>
-                            <option value="hog">Hög</option>
-                        </select>
-                    </div>
                     <button type="submit" value="submit">Genomför köp</button>
                 </div>
             </form>
