kommit lite längre på valideringen

--- a/4-forms/index.html
+++ b/4-forms/index.html
@@ -9,22 +9,22 @@
         <main>
             <form name"form_name" id="form_name" method="post" action="http://voyager.lnu.se/tekinet/kurser/dtt/wp_webbteknik/process_form.php" onsubmit="return (Validator.validation())">
                 <div class="row">
-                    <div class="large-12 columns">
+                    <div class="large-4 columns" id="fDiv">
                         <label>Förnamn</label>
                         <input type="text" id="fName" placeholder="Förnamn" name="name" class="empty" />
                     </div>
                 </div>
                 
                 <div class="row">
-                    <div class="large-4 columns">
+                    <div class="large-4 columns" id="sDiv">
                       <label>Efternamn</label>
                       <input type="text" id="sName" placeholder="Efternamn" name="surname" class="empty" />
                     </div>
-                        <div class="large-4 columns">
+                        <div class="large-4 columns" id="pDiv">
                           <label>Postnummer</label>
                           <input type="text" id="postCode" placeholder="XXXXX" name="postalcode" />
                         </div>
-                            <div class="large-4 columns">
+                            <div class="large-4 columns" id="eDiv">
                                 <div class="row collapse">
                                     <label>E-post</label>
                                     <input type="text" id="email" placeholder="E-post" name="email" />
