kommit väldigt långt i valideringen

--- a/4-forms/index.html
+++ b/4-forms/index.html
@@ -7,7 +7,7 @@
 </head>
     <body>
         <main>
-            <form name"form_name" id="form_name" method="post" action="http://voyager.lnu.se/tekinet/kurser/dtt/wp_webbteknik/process_form.php" onsubmit="return (Validator.validation())">
+            <form name"form_name" id="form_name" method="post" action="http://voyager.lnu.se/tekinet/kurser/dtt/wp_webbteknik/process_form.php">
                 <div class="row">
                     <div class="large-4 columns" id="fDiv">
                         <label>Förnamn</label>
