börjat med projektet

--- a/4-forms/index.html
+++ b/4-forms/index.html
@@ -42,16 +42,16 @@
                             </select>
                         </div>
                 </div>
-                <div class="row">
+                <!--<div class="row">
                     <div class="button-field large-12 columns">
                         <a href="#" id="button" class="button success">Genomför köp</a>
                     </div>
-                </div>
-                <!--<div class="row">
-                    <button type="submit" value="submit">Genomför köp</button>
                 </div>-->
+                <div class="row">
+                    <button id="button" type="submit" value="submit">Genomför köp</button>
+                </div>
             </form>
         </main>
-        <script src="script.js"></script>
+    <script src="script.js"></script>
     </body>
 </html>
