--- a/5-pwd/index.html
+++ b/5-pwd/index.html
@@ -5,12 +5,13 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Projekt</title>
 </head>
-    <body>
+    <body id="body">
         <main class="main" id="main">
             <div class="bottom">
                 <img id="img" src="pics/pics_48x48.png">
             </div>
         </main>
         <script src="script/script.js"></script>
+        <script src="script/createwindow.js"></script>
     </body>
 </html>
