klar med betyg steg 3

--- a/5-pwd/index.html
+++ b/5-pwd/index.html
@@ -5,13 +5,15 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Projekt</title>
 </head>
-    <body id="body">
+    <body>
         <main class="main" id="main">
             <div class="bottom">
                 <img id="img" src="pics/pics_48x48.png">
+                <img id="rss" src="pics/rss.png">
             </div>
         </main>
         <script src="script/script.js"></script>
         <script src="script/createwindow.js"></script>
+        <script src="script/jsonajax.js"></script>
     </body>
 </html>
