fortsätter framåt på projektet

--- a/5-pwd/index.html
+++ b/5-pwd/index.html
@@ -14,6 +14,6 @@
         </main>
         <script src="script/script.js"></script>
         <script src="script/createwindow.js"></script>
-        <script src="script/jsonajax.js"></script>
+        <script src="script/rss.js"></script>
     </body>
 </html>
