--- a/5-pwd/index.html
+++ b/5-pwd/index.html
@@ -15,5 +15,6 @@
         <script src="script/script.js"></script>
         <script src="script/createwindow.js"></script>
         <script src="script/rss.js"></script>
+        <script src="script/gallery.js"></script>
     </body>
 </html>
