kört lite fast på projektet

--- a/3-gameon/index.html
+++ b/3-gameon/index.html
@@ -12,5 +12,6 @@
         <script src="memory/script/random.js"></script>
         <script src="memory/script/memory.js"></script>
         <script src="memory/script/card.js"></script>
+        <!--<script src="memory/script/memory1.js"></script>-->
     </body>
 </html>
