--- a/5-pwd/index.html
+++ b/5-pwd/index.html
@@ -5,16 +5,20 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Projekt</title>
 </head>
-    <body>
+    <body id="body">
         <main class="main" id="main">
             <div class="bottom">
                 <img id="img" src="pics/pics_48x48.png">
                 <img id="rss" src="pics/rss.png">
+                <img id="game" src="pics/game.png">
             </div>
         </main>
         <script src="script/script.js"></script>
         <script src="script/createwindow.js"></script>
         <script src="script/rss.js"></script>
         <script src="script/gallery.js"></script>
+        <script src="script/card.js"></script>
+        <script src="script/memory.js"></script>
+        <script src="script/random.js"></script>
     </body>
 </html>
