styling kvar på projektet

--- a/5-pwd/index.html
+++ b/5-pwd/index.html
@@ -8,14 +8,16 @@
     <body id="body">
         <main class="main" id="main">
             <div class="bottom">
-                <img id="img" src="pics/pics_48x48.png">
-                <img id="rss" src="pics/rss.png">
-                <img id="game" src="pics/game.png">
+                <a title="Image Viewer"><img id="img" src="pics/pics_48x48.png"></a>
+                <a title="Dagens Nyheter"><img id="rss" src="pics/rss.png"></a>
+                <a title="Aftonbladet"><img id="rss1" src="pics/rss1.png"></a>
+                <a title="Memory"><img id="game" src="pics/game.png"></a>
             </div>
         </main>
         <script src="script/script.js"></script>
         <script src="script/createwindow.js"></script>
         <script src="script/rss.js"></script>
+        <script src="script/rssaft.js"></script>
         <script src="script/gallery.js"></script>
         <script src="script/card.js"></script>
         <script src="script/memory.js"></script>
