klar med projekt

--- a/5-pwd/index.html
+++ b/5-pwd/index.html
@@ -8,10 +8,10 @@
     <body id="body">
         <main class="main" id="main">
             <div class="bottom">
-                <a title="Image Viewer"><img id="img" src="pics/pics_48x48.png"></a>
-                <a title="Dagens Nyheter"><img id="rss" src="pics/rss.png"></a>
-                <a title="Aftonbladet"><img id="rss1" src="pics/rss1.png"></a>
-                <a title="Memory"><img id="game" src="pics/game.png"></a>
+                <a href="#" title="Gallery"><img id="img" src="pics/pics_48x48.png"></a>
+                <a href="#" title="Dagens Nyheter"><img id="rss" src="pics/rss.png"></a>
+                <a href="#" title="Aftonbladet"><img id="rss1" src="pics/rss1.png"></a>
+                <a href="#" title="Memory"><img id="game" src="pics/game.png"></a>
             </div>
         </main>
         <script src="script/script.js"></script>
